[workspace]
members = [
    "stabilitypool-common",
    "stabilitypool-client",
    "stabilitypool-server",
]
resolver = "2"

[workspace.dependencies]
fedimint-core = { git = "https://github.com/fedimint/fedimint", rev = "183bff69f030b89f2cd78dbb91bdecf895048e3e" }
fedimint-server = { git = "https://github.com/fedimint/fedimint", rev = "183bff69f030b89f2cd78dbb91bdecf895048e3e" }
fedimint-client = { git = "https://github.com/fedimint/fedimint", rev = "183bff69f030b89f2cd78dbb91bdecf895048e3e" }
fedimint-cli = { git = "https://github.com/fedimint/fedimint", rev = "183bff69f030b89f2cd78dbb91bdecf895048e3e" }
fedimint-mint-client = { git = "https://github.com/fedimint/fedimint", rev = "183bff69f030b89f2cd78dbb91bdecf895048e3e" }

[patch.crates-io]
secp256k1-zkp = { git = "https://github.com/dpc/rust-secp256k1-zkp/", branch = "sanket-pr" }
ring = { git = "https://github.com/dpc/ring", rev = "5493e7e76d0d8fb1d3cbb0be9c4944700741b802" }

[profile.dev]

# in dev mode optimize crates that are perf-critical (usually just crypto crates)
[profile.dev.package]
secp256k1 = { opt-level = 3 }
secp256k1-zkp = { opt-level = 3 }
secp256k1-sys = { opt-level = 3 }
secp256k1-zkp-sys = { opt-level = 3 }
bitcoin_hashes = { opt-level = 3 }
ff = { opt-level = 3 }
group = { opt-level = 3 }
pairing = { opt-level = 3 }
rand_core = { opt-level = 3 }
byteorder = { opt-level = 3 }
zeroize = { opt-level = 3 }
bls12_381 = { opt-level = 3 }
subtle = { opt-level = 3 }
ring = { opt-level = 3 }
threshold_crypto = { opt-level = 3 }
